Fixed overflow problem of .intro section.
Added min-height function in the .intro class

--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 .intro {
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 85vh;
+    min-height: 400px;
     background-image: url("./img/firewood-stacked.jpg");
     background-size: cover;
     background-position: center;
@@ -61,7 +62,7 @@ body {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .Content .section1 {
@@ -71,7 +72,6 @@ body {
     flex-direction: column;
     padding: 50px 300px;
     background-color: #242424;
-    border: 2px solid red;  
 }
 
 
@@ -87,8 +87,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-basis: 150px;
-    border: 2px solid green;
-
 }
 
 .Content .section1 .images img {
@@ -107,7 +105,6 @@ body {
     padding: 50px 300px;
     background-color: #626060;
     gap: 0px;
-    border:2px solid red;
     
 }
 
@@ -116,7 +113,6 @@ body {
  {
     display: flex;
     width: 800px;
-    border: 2px solid red;
     margin: 0px;
 }
 
@@ -137,15 +133,12 @@ body {
     align-items: center;
     padding: 100px 200px;
     background-color: #242424;
-    border: 2px solid red;
-    
 }
 .Content .section3 .container {
     flex-basis: 800px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    border: 2px solid red;
     background-color: hsl(217, 61%, 13%);
     padding: 50px 80px;
 }
